put in my image to finish project

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 			I also really enjoy camping and being in the outdoors. During the summer time me and my friends would
 			disappear into the hills and listen to music, hike, drink, smoke, and party.
 		</p>
+		<div>
+			<img src="image1.jpeg" alt="selfie"/>
+		</div>
 	</body>
 </html>
