added slight styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1> A Little About THE Trystan Gray</h1>
+		<link type="text/css" href="./style.css" rel="stylesheet" />
 		<p>
 			First off I LOVE CARS! No, not the movies. I love fast and sporty cars, supercars more specifically.
 			One day I want to own some type of supercar like a Lamborghini Aventador.
@@ -18,7 +19,7 @@
 			I also really enjoy camping and being in the outdoors. During the summer time me and my friends would
 			disappear into the hills and listen to music, hike, drink, smoke, and party.
 		</p>
-		<div>
+		<div class="background">
 			<img src="image1.jpeg" alt="selfie"/>
 		</div>
 	</body>
