Edited image size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			disappear into the hills and listen to music, hike, drink, smoke, and party.
 		</p>
 		<div class="background">
-			<img src="image1.jpeg" alt="selfie"/>
+			<img src="image1.jpeg" width="200" alt="selfie"/>
 		</div>
 	</body>
 </html>
