Coded blinking text

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>About Trystan</title>
+		<title>Blinking Text</title>
 	</head>
 	<body>
-		<h1> A Little About THE Trystan Gray</h1>
+		<blink>A Little About THE Trystan Gray</blink>
 		<link type="text/css" href="./style.css" rel="stylesheet" />
 		<p>
 			First off I LOVE CARS! No, not the movies. I love fast and sporty cars, supercars more specifically.
