--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Blinking Text</title>
+		<title>Blinking Text Via CSS3</title>
 	</head>
 	<body>
-		<blink>A Little About THE Trystan Gray</blink>
+		<br /><br /><br /><center>
+
+		<h1>A Little About THE Trystan Gray</h1>
+
+	</center>
+
 		<link type="text/css" href="./style.css" rel="stylesheet" />
 		<p>
 			First off I LOVE CARS! No, not the movies. I love fast and sporty cars, supercars more specifically.
