--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Blinking Text Via CSS3</title>
+		<title>About Trystan</title>
 	</head>
 	<body>
 		<br /><br /><br /><center>
