Changed color background

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>About Trystan</title>
+		<title>About Trystan gray</title>
+
+		<style>
+			body{
+				background-color: black;
+
+			}
+			h1{
+				color:white;
+				Animation: flash linear 1s infinite;
+			}
+		</style>
 	</head>
 	<body>
 		<br /><br /><br /><center>
