--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 			disappear into the hills and listen to music, hike, drink, smoke, and party.
 		</p>
 		<div class="background">
-			<img src="image1.jpeg" width="200" alt="selfie"/>
+			<center>
+				<img src="image1.jpeg" width="200" alt="selfie"/>
+			</center>
 		</div>
 	</body>
 </html>
