--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			disappear into the hills and listen to music, hike, drink, smoke, and party.
 		</p>
 		<div class="background">
-			<center>
+			<br /><br /><br />><center>
 				<img src="image1.jpeg" width="200" alt="selfie"/>
 			</center>
 		</div>
