--- a/index.html
+++ b/index.html
@@ -23,20 +23,25 @@
 	</center>
 
 		<link type="text/css" href="./style.css" rel="stylesheet" />
-		<p>
+
+		<center><p>
 			First off I LOVE CARS! No, not the movies. I love fast and sporty cars, supercars more specifically.
 			One day I want to own some type of supercar like a Lamborghini Aventador.
-		</p>
-		<p>
+		</p></center>
+
+		<center><p>
 			I am a snowboarder, I am from a smallish town in Idaho and I had a season pass to our local mountain
 			which conveniently was only 25 minutes from my house so I went a lot.
 		</p>
-		<p>
+		</center>
+
+		<center><p>
 			I also really enjoy camping and being in the outdoors. During the summer time me and my friends would
 			disappear into the hills and listen to music, hike, drink, smoke, and party.
-		</p>
+		</p></center>
+
 		<div class="background">
-			<br /><br /><br />><center>
+			<br /><br /><br /><center>
 				<img src="image1.jpeg" width="200" alt="selfie"/>
 			</center>
 		</div>
