--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 			}
 			h1{
 				color:white;
-				Animation: flash linear 1s infinite;
+				animation: flash linear 1s infinite;
 			}
+			
+			@keyframes flash {
+				0%{opacity: 1;}
+
+				50%{opacity:0;}
+
+				100%{opacity: 1;}
+
+			}
+			
 		</style>
 	</head>
 	<body>
