changed title font size

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 	<body>
 		<br /><br /><br /><center>
 
-		<h1>A Little About THE Trystan Gray</h1>
+		<h1>A Little About THE Trystan Gray
+		font-size 30px;
+		</h1>
 
 	</center>
 
