--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 	<body>
 		<br /><br /><br /><center>
 
-		<h1>A Little About THE Trystan Gray
-		font-size 30px;
-		</h1>
+		<h1>A Little About THE Trystan Gray</h1>
 
 	</center>
 
