--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
 		<link type="text/css" href="./style.css" rel="stylesheet" />
 
 		<center><p>
-			First off I LOVE CARS! No, not the movies. I love fast and sporty cars, supercars more specifically.
-			One day I want to own some type of supercar like a Lamborghini Aventador.
+			First off I LOVE CARS! No, not the movies. Just Kidding it was cars, especially Mater he's my favorite. I love fast and sporty cars, supercars more specifically.
+			One day I want to own some type of supercar like a Cheetah print Lamborghini.
 		</p></center>
 
 		<center><p>
-			I am a snowboarder, I am from a smallish town in Idaho and I had a season pass to our local mountain
-			which conveniently was only 25 minutes from my house so I went a lot.
+			I'm a small town guy from Idaho, Mr. Potato Head is my hero. Itake him everywhere I go. We spent a lot of time on the mountain snowboarding.
 		</p>
 		</center>
 
