--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
 		</center>
 
 		<center><p>
-			I also really enjoy camping and being in the outdoors. During the summer time me and my friends would
+			I also really enjoy camping and being in the outdoors. During the summer time my friends, Mr. Potato Head and I would
 			disappear into the hills and listen to music, hike, drink, smoke, and party.
 		</p></center>
+
+		<div class="background">
+			<br /><br /><br /><center>
+			<img src="MrPoatoHead.jpg" width="100" alt="selfie"/>
+		</center>
 
 		<div class="background">
 			<br /><br /><br /><center>
