--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 			One day I want to own some type of supercar like a Cheetah print Lamborghini.
 		</p></center>
 
+		<div class="background">
+			<br /><br /><br /><center>
+			<img src="mater.jpg" width="200" alt="mater"/>
+		</center>
+
 		<center><p>
 			I'm a small town guy from Idaho, Mr. Potato Head is my hero. Itake him everywhere I go. We spent a lot of time on the mountain snowboarding.
 		</p>
@@ -51,7 +56,7 @@
 
 		<div class="background">
 			<br /><br /><br /><center>
-			<img src="MrPoatoHead.jpg" width="100" alt="selfie"/>
+			<img src="MrPoatoHead.jpg" width="100" alt="mrpotatohead"/>
 		</center>
 
 		<div class="background">
