Changed text in <p>

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</center>
 
 		<center><p>
-			I'm a small town guy from Idaho, Mr. Potato Head is my hero. Itake him everywhere I go. We spent a lot of time on the mountain snowboarding.
+			I'm a small town guy from Idaho. Mr. Potato Head is my hero. Itake him everywhere I go. We spent a lot of time on the mountain snowboarding.
 		</p>
 		</center>
 
